--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.0.7</version>
 		</dependency>
-
+	
+		<dependency>
+			<groupId>opensymphony</groupId>
+			<artifactId>sitemesh</artifactId>
+			<version>2.4.2</version>
+		</dependency> 
+		
 	</dependencies>
     <build>
         <plugins>
