[Modify] files in ProductList

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+src/main/webapp/META-INF
+src/main/webapp/WEB-INF/lib
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,intellij,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,intellij,eclipse
 
