--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,20 @@
 		  <version>2.4.2</version>
 		</dependency>
 		
+		<!-- naver -->
+		<dependency>
+			<groupId>com.github.scribejava</groupId>
+			<artifactId>scribejava-core</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+ 
+		<!-- 제이슨 파싱 -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		
 	</dependencies>
     <build>
         <plugins>
