--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 target/
 .DS_Store
 
+src/main/webapp/META-INF/
+src/main/webapp/WEB-INF/lib/
+src/main/webapp/WEB-INF/classes/
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,intellij,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,intellij,eclipse
 
