--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,20 @@
 		  <artifactId>sitemesh</artifactId>
 		  <version>2.4.2</version>
 		</dependency>
-		
+
+		<!-- json -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.9</version>
+		</dependency>
+		<!-- json-simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 	</dependencies>
     <build>
         <plugins>
