--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 			<version>2.1</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- jstl -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -117,7 +117,8 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>   
+		</dependency>
+
 		<!-- JDBC -->   
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -128,14 +129,16 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.23</version>
+			<version>5.0.7</version>
 		</dependency>
+
 		 <!-- myBatis -->
 		 <dependency>
 		    <groupId>org.mybatis</groupId>
 		    <artifactId>mybatis</artifactId>
 		    <version>3.2.8</version>
 		 </dependency>
+
 		 <dependency>
 		   <groupId>org.mybatis</groupId>
 		   <artifactId>mybatis-spring</artifactId>
@@ -155,6 +158,19 @@
 		  <version>2.4.2</version>
 		</dependency>
 
+		<!-- naver -->
+		<dependency>
+            <groupId>com.github.scribejava</groupId>
+            <artifactId>scribejava-apis</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
+		<dependency>
+			<groupId>com.github.scribejava</groupId>
+			<artifactId>scribejava-core</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+
 		<!-- json -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -162,45 +178,24 @@
 			<version>2.9.9</version>
 		</dependency>
 
-		<!-- naver -->
+		<!-- json-simple -->
 		<dependency>
-            <groupId>com.github.scribejava</groupId>
-            <artifactId>scribejava-apis</artifactId>
-            <version>2.8.1</version>
-        </dependency>
-		
-		<dependency>
-			<groupId>com.github.scribejava</groupId>
-			<artifactId>scribejava-core</artifactId>
-			<version>2.8.1</version>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
 		</dependency>
- 
-		<!-- 제이슨 파싱 -->
 		<dependency>
-		    <groupId>com.googlecode.json-simple</groupId>
-		    <artifactId>json-simple</artifactId>
-		    <version>1.1.1</version>
-		</dependency>
-		
-		<dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.5</version>
-        </dependency>
-        
-        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
        <version>2.9.5</version>
        </dependency>
-       
+
 		<!-- Spring Security -->
  		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-web</artifactId>
 		    <version>${org.springframework-version}</version>
 		</dependency>
-
 	</dependencies>
     <build>
         <plugins>
