--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,13 @@
             <artifactId>jackson-dataformat-xml</artifactId>
        <version>2.9.5</version>
        </dependency>
+       
+       <!--기본 org.json  -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20180813</version>
+		</dependency>
 
 		<!-- Spring Security -->
  		<dependency>
